<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/item_profile" />
        <item
            android:id="@+id/item_choice_of_services"
            android:icon="@drawable/ic_choice_of_services"
            android:title="@string/item_choice_of_services" />
        <item
            android:id="@+id/item_shopping_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/item_shopping_cart" />
        <item
            android:id="@+id/item_my_contracts"
            android:icon="@drawable/ic_my_contracts"
            android:title="@string/item_my_contracts" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/item_about_app"
                android:icon="@drawable/ic_about_app"
                android:title="@string/item_about_app" />

            <item
                android:id="@+id/item_exit"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/item_exit" />
        </menu>
    </item>
</menu>