<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.EditDataProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit_data_profile"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/edit_data_profile" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/name"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_edit_data_profile" />

    <EditText
        android:id="@+id/surnameEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/surname"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

    <EditText
        android:id="@+id/patronymicEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/patronymic"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameEdit" />

    <EditText
        android:id="@+id/addressEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/address"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patronymicEdit" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/password"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEdit" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_in_login_window"
        android:elevation="5dp"
        android:onClick="clickOnEditDataProfile"
        android:text="@string/edit_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationZ="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>