<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingCartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_shopping_cart"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/item_shopping_cart" />

    <include
        android:id="@+id/rcInShoppingCartActivity"
        layout="@layout/shopping_cart_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_shopping_cart" />

    <TextView
        android:id="@+id/textView_shopping_cart_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/shopping_cart_empty"
        android:textColor="@color/colorLoginBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar_shopping_cart"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_shopping_cart" />

    <TextView
        android:id="@+id/textView_shopping_cart_help"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/shopping_cart_help"
        android:textAlignment="center"
        android:textColor="@color/colorRegisterOrange"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_shopping_cart_empty"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/textView_shopping_cart_empty"
        app:layout_constraintTop_toBottomOf="@+id/textView_shopping_cart_empty" />

    <Button
        android:id="@+id/button_shopping_cart"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_in_login_window"
        android:onClick="clickOnChoiceOfServices"
        android:text="@string/go_to_choice_of_services"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView_shopping_cart_help"
        app:layout_constraintStart_toStartOf="@+id/textView_shopping_cart_help"
        app:layout_constraintTop_toBottomOf="@+id/textView_shopping_cart_help" />

</androidx.constraintlayout.widget.ConstraintLayout>