<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/blue_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:srcCompat="@drawable/blue_rectangle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="570dp"
        android:background="@drawable/blue_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_rectangle" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/orange_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/imageView1"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orange_rectangle" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="200dp"
        android:background="@drawable/orange_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:srcCompat="@drawable/orange_rectangle" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/name"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textReg" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/surname"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/patronymic"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/patronymic"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patronymic" />

    <EditText
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/address"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/login"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_in_login_window"
        android:elevation="10dp"
        android:hint="@string/password"
        android:maxLength="25"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorLoginBlue"
        android:textColorHint="@color/colorLoginBlue"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_in_login_window"
        android:elevation="5dp"
        android:onClick="clickOnRegister"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationZ="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/blue_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_rectangle" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/orange_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orange_rectangle" />

    <TextView
        android:id="@+id/textReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:text="@string/reg"
        android:textColor="@color/colorLoginBlue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>